--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.44.3",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0"
   },
