--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0"
   },
