--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
+    "axios": "^1.4.0",
     "firebase": "^9.22.1",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
@@ -21,9 +22,11 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-loader-spinner": "^5.3.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
